--- a/index.html
+++ b/index.html
@@ -1,10 +1,75 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>My GitHub Page</title>
+    <title>Christian Ministry - Welcome!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my GitHub Page.</p>
+<body bgcolor="#111111" text="#FF69B4">
+
+    <!-- Navigation Bar -->
+    <center>
+        <font size="5" face="Arial">
+            <a href="#" class="navlink">Home</a> | 
+            <a href="#" class="navlink">Statement of Faith</a> | 
+            <a href="#" class="navlink">Policies</a> | 
+            <a href="#" class="navlink">Sermons</a> | 
+            <a href="#" class="navlink">Contact</a>
+        </font>
+    </center>
+    <hr>
+
+    <!-- Hero Section -->
+    <center>
+        <font size="6" face="Times New Roman" color="white">
+            Welcome to Our Christian Ministry!
+        </font>
+        <br>
+        <marquee><font size="4">Spreading the Gospel since the 90s!</font></marquee>
+        <br>
+        <img src="cross.gif" alt="Cross" width="100" height="100"> <!-- Placeholder for a 90s-style GIF -->
+    </center>
+
+    <!-- Statistics Section -->
+    <center>
+        <table border="0" cellpadding="10">
+            <tr>
+                <td align="center">
+                    <font size="6" color="white">17K+</font><br>
+                    <font size="3">People reached daily via social media</font>
+                </td>
+                <td align="center">
+                    <font size="6" color="white">1000</font><br>
+                    <font size="3">Days of operation</font>
+                </td>
+                <td align="center">
+                    <font size="6" color="white">500</font><br>
+                    <font size="3">Days of daily posts in a row</font>
+                </td>
+            </tr>
+        </table>
+    </center>
+
+    <!-- Mission Section -->
+    <center>
+        <font size="5" face="Times New Roman" color="white">
+            Our Mission
+        </font>
+        <br>
+        <font size="4">
+            We are dedicated to spreading the gospel and supporting our community through faith and action.
+        </font>
+    </center>
+    <hr>
+
+    <!-- Footer -->
+    <center>
+        <font size="3">
+            © 2023 Christian Ministry - <a href="#" class="navlink">Sign our Guestbook!</a>
+            <br>
+            <img src="underconstruction.gif" alt="Under Construction" width="100" height="50"> <!-- Placeholder -->
+            <br>
+            Last Updated: February 21, 2025
+        </font>
+    </center>
+
 </body>
 </html>
