--- a/index.html
+++ b/index.html
@@ -1,75 +1,53 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Ministry - Welcome!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor="#111111" text="#FF69B4">
-
+<body>
     <!-- Navigation Bar -->
-    <center>
-        <font size="5" face="Arial">
-            <a href="#" class="navlink">Home</a> | 
-            <a href="#" class="navlink">Statement of Faith</a> | 
-            <a href="#" class="navlink">Policies</a> | 
-            <a href="#" class="navlink">Sermons</a> | 
-            <a href="#" class="navlink">Contact</a>
-        </font>
-    </center>
-    <hr>
+    <div class="nav">
+        <a href="#">HOME</a> | 
+        <a href="#">FAITH</a> | 
+        <a href="#">RULES</a> | 
+        <a href="#">SERMONS</a> | 
+        <a href="#">CONTACT</a>
+    </div>
 
     <!-- Hero Section -->
-    <center>
-        <font size="6" face="Times New Roman" color="white">
-            Welcome to Our Christian Ministry!
-        </font>
-        <br>
-        <marquee><font size="4">Spreading the Gospel since the 90s!</font></marquee>
-        <br>
-        <img src="cross.gif" alt="Cross" width="100" height="100"> <!-- Placeholder for a 90s-style GIF -->
-    </center>
+    <div class="hero">
+        <h1>CHRISTIAN MINISTRY</h1>
+        <marquee>JESUS ROCKS!</marquee>
+    </div>
 
     <!-- Statistics Section -->
-    <center>
-        <table border="0" cellpadding="10">
-            <tr>
-                <td align="center">
-                    <font size="6" color="white">17K+</font><br>
-                    <font size="3">People reached daily via social media</font>
-                </td>
-                <td align="center">
-                    <font size="6" color="white">1000</font><br>
-                    <font size="3">Days of operation</font>
-                </td>
-                <td align="center">
-                    <font size="6" color="white">500</font><br>
-                    <font size="3">Days of daily posts in a row</font>
-                </td>
-            </tr>
-        </table>
-    </center>
+    <div class="stats">
+        <div class="stat">
+            <h2>17K+</h2>
+            <p>People reached daily via social media</p>
+        </div>
+        <div class="stat">
+            <h2>1000</h2>
+            <p>Days of operation</p>
+        </div>
+        <div class="stat">
+            <h2>500</h2>
+            <p>Days of daily posts in a row</p>
+        </div>
+    </div>
 
     <!-- Mission Section -->
-    <center>
-        <font size="5" face="Times New Roman" color="white">
-            Our Mission
-        </font>
-        <br>
-        <font size="4">
-            We are dedicated to spreading the gospel and supporting our community through faith and action.
-        </font>
-    </center>
-    <hr>
+    <div class="mission">
+        <h3>Our Mission</h3>
+        <p>We are dedicated to spreading the gospel and supporting our community through faith and action.</p>
+    </div>
 
     <!-- Footer -->
-    <center>
-        <font size="3">
-            © 2023 Christian Ministry - <a href="#" class="navlink">Sign our Guestbook!</a>
-            <br>
-            <img src="underconstruction.gif" alt="Under Construction" width="100" height="50"> <!-- Placeholder -->
-            <br>
-            Last Updated: February 21, 2025
-        </font>
-    </center>
-
+    <div class="footer">
+        <p>© 2023 Christian Ministry - <a href="#">Sign the Guestbook!</a></p>
+        <img src="90s.gif" alt="90s vibe" width="100" height="100">
+    </div>
 </body>
 </html>
