--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christian Ministry - Welcome!</title>
+    <title>Reject Lukewarm</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <div class="nav">
-        <a href="#">HOME</a> | 
-        <a href="#">FAITH</a> | 
-        <a href="#">RULES</a> | 
-        <a href="#">SERMONS</a> | 
-        <a href="#">CONTACT</a>
+        <a href="#">Sermons</a> | 
+        <a href="#">Statement of Faith</a> | 
+        <a href="#">Socials</a>
     </div>
 
     <!-- Hero Section -->
@@ -25,16 +23,16 @@
     <!-- Statistics Section -->
     <div class="stats">
         <div class="stat">
-            <h2>17K+</h2>
-            <p>People reached daily via social media</p>
+            <h2>2</h2>
+            <p>text and visual sermons</p>
         </div>
         <div class="stat">
-            <h2>1000</h2>
-            <p>Days of operation</p>
+            <h2>17,000</h2>
+            <p>accounts reached every dady</p>
         </div>
         <div class="stat">
-            <h2>500</h2>
-            <p>Days of daily posts in a row</p>
+            <h2>600+</h2>
+            <p>Daily Bible Verses posted</p>
         </div>
     </div>
 
@@ -46,7 +44,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p>© 2023 Christian Ministry - <a href="#">Sign the Guestbook!</a></p>
+        <p>©2025 Christian Ministry - <a href="#">Sign the Guestbook!</a></p>
         <img src="90s.gif" alt="90s vibe" width="100" height="100">
     </div>
 </body>
